force-app/main/default/objects/Conge_Indispo__c/Conge_Indispo__c.object-meta.xml
<CustomObject>
    <description>Permet de gérer les périodes de congés, de disponibilités et des indisponibilités des PUDO.</description>
    <label>Congés/disponibilité/indisponibilité</label>
    <nameField>
        <displayFormat>CDI-{0000}</displayFormat>
        <label>Numéro du Congé, Dispo ou Indispo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Congés/disponibilités/indisponibilités</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>