force-app/main/default/objects/Conge_Indispo__c/fields/Anomalie__c.field-meta.xml
<CustomField>
    <fullName>Anomalie__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Champ technique servant à référencer une anomalie</description>
    <label>Anomalie</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Anomalie__c.PUDO__c</field>
            <operation>equals</operation>
            <valueField>$Source.Nom_du_compte__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Anomalie__c</referenceTo>
    <relationshipLabel>Congés/disponibilités/indisponibilités</relationshipLabel>
    <relationshipName>Cong_s_disponibilit_s_indisponibilit_s</relationshipName>
    <type>Lookup</type>
</CustomField>