force-app/main/default/objects/Conge_Indispo__c/fields/Autres_motif__c.field-meta.xml
<CustomField>
    <fullName>Autres_motif__c</fullName>
    <label>Autres (motif)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>