force-app/main/default/objects/Conge_Indispo__c/fields/Cause_d_indisponibilite__c.field-meta.xml
<CustomField>
    <fullName>Cause_d_indisponibilite__c</fullName>
    <label>Cause d&#39;indisponibilité</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_d_indisponibilite__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Panne matérielle</fullName>
            </value>
            <value>
                <fullName>Panne électrique</fullName>
            </value>
            <value>
                <fullName>Panne écran</fullName>
            </value>
            <value>
                <fullName>Panne réseau</fullName>
            </value>
            <value>
                <fullName>Vandalisme</fullName>
            </value>
            <value>
                <fullName>Travaux non prévus/communiqués</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Travaux</fullName>
            </value>
            <value>
                <fullName>Désinstallation temporaire</fullName>
            </value>
            <value>
                <fullName>Autre(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>