force-app/main/default/objects/Conge_Indispo__c/fields/Compte_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Compte_RecordType__c</fullName>
    <formula>Nom_du_compte__r.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compte RecordType</label>
    <type>Text</type>
</CustomField>