force-app/main/default/objects/Conge_Indispo__c/fields/Date_de_fin__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fin__c</fullName>
    <label>Date de fin</label>
    <type>Date</type>
</CustomField>