force-app/main/default/objects/Conge_Indispo__c/fields/Duree_totale_injoignabilite__c.field-meta.xml
<CustomField>
    <fullName>Duree_totale_injoignabilite__c</fullName>
    <label>Durée totale injoignabilité (en jours)</label>
    <summarizedField>Historique_Injoignabilites__c.Duree__c</summarizedField>
    <summaryForeignKey>Historique_Injoignabilites__c.Indisponibilite__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>