force-app/main/default/objects/Conge_Indispo__c/fields/Indispo_AnomalieC_cree__c.field-meta.xml
<CustomField>
    <fullName>Indispo_AnomalieC_cree__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champ technique pour éviter la création de plusieurs requête dans la cas de modification d&#39;une Indisponibilité</description>
    <label>Indispo_AnomalieC_crée</label>
    <type>Checkbox</type>
</CustomField>