force-app/main/default/objects/Conge_Indispo__c/fields/Indispo_Panne_PDA_cree__c.field-meta.xml
<CustomField>
    <fullName>Indispo_Panne_PDA_cree__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champ technique pour indiquer qu&#39;une indisponibilité Panne PDA a été créée.</description>
    <label>Indispo Panne PDA créée</label>
    <type>Checkbox</type>
</CustomField>