force-app/main/default/objects/Conge_Indispo__c/fields/Indispo_sans_DdF_cree__c.field-meta.xml
<CustomField>
    <fullName>Indispo_sans_DdF_cree__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champ technique pour indiquer qu&#39;une indisponibilité STS sans date de fin a été créée.</description>
    <label>Indispo sans DdF crée</label>
    <type>Checkbox</type>
</CustomField>