force-app/main/default/objects/Conge_Indispo__c/fields/Injoignable__c.field-meta.xml
<CustomField>
    <fullName>Injoignable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Injoignable</label>
    <type>Checkbox</type>
</CustomField>