force-app/main/default/objects/Conge_Indispo__c/fields/Injoignable_cree__c.field-meta.xml
<CustomField>
    <fullName>Injoignable_cree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Injoignable_crée</label>
    <type>Checkbox</type>
</CustomField>