force-app/main/default/objects/Conge_Indispo__c/fields/Injoignable_depuis_le__c.field-meta.xml
<CustomField>
    <fullName>Injoignable_depuis_le__c</fullName>
    <label>Injoignable depuis le</label>
    <type>Date</type>
</CustomField>