force-app/main/default/objects/Conge_Indispo__c/fields/Inventaire__c.field-meta.xml
<CustomField>
    <fullName>Inventaire__c</fullName>
    <label>Inventaire</label>
    <type>Date</type>
</CustomField>