force-app/main/default/objects/Conge_Indispo__c/fields/PDA_Period_Id__c.field-meta.xml
<CustomField>
    <fullName>PDA_Period_Id__c</fullName>
    <label>PDA Period Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>