force-app/main/default/objects/Conge_Indispo__c/fields/Raison_d_appel__c.field-meta.xml
<CustomField>
    <fullName>Raison_d_appel__c</fullName>
    <label>Raison d&#39;appel</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sous_type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Anomalie Colis</fullName>
            </value>
            <value>
                <fullName>Anomalie de synchronisation</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
            <value>
                <fullName>Démarrage d&#39;activité</fullName>
            </value>
            <value>
                <fullName>Dévoyé</fullName>
            </value>
            <value>
                <fullName>Dévoyés</fullName>
                <isActive>false</isActive>
                <label>Dévoyés</label>
            </value>
            <value>
                <fullName>Enquête de bienvenue</fullName>
            </value>
            <value>
                <fullName>Enquête de satisfaction</fullName>
            </value>
            <value>
                <fullName>Exclusion</fullName>
            </value>
            <value>
                <fullName>Indisponibilité problème PDA</fullName>
            </value>
            <value>
                <fullName>Indisponibilité qualité de service</fullName>
            </value>
            <value>
                <fullName>Indisponibilité S/T/S</fullName>
            </value>
            <value>
                <fullName>Injoignable</fullName>
            </value>
            <value>
                <fullName>Menace de résiliation</fullName>
                <label>Menaces de résiliation</label>
            </value>
            <value>
                <fullName>Panne PDA</fullName>
            </value>
            <value>
                <fullName>Pas de PDA associé</fullName>
            </value>
            <value>
                <fullName>Problème synchronisation</fullName>
            </value>
            <value>
                <fullName>Résiliation</fullName>
            </value>
            <value>
                <fullName>Sinistre/Travaux/Santé</fullName>
            </value>
            <value>
                <fullName>Surchage</fullName>
                <isActive>false</isActive>
                <label>Surchage</label>
            </value>
            <value>
                <fullName>Surcharge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>