force-app/main/default/objects/Conge_Indispo__c/fields/ReferenceExterne__c.field-meta.xml
<CustomField>
    <fullName>ReferenceExterne__c</fullName>
    <label>Réference Externe</label>
    <type>AutoNumber</type>
</CustomField>