force-app/main/default/objects/Conge_Indispo__c/fields/Sous_type__c.field-meta.xml
<CustomField>
    <fullName>Sous_type__c</fullName>
    <label>Sous type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_d_indisponibilite__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sinistre / Travaux / Santé</fullName>
            </value>
            <value>
                <fullName>Qualité de service</fullName>
            </value>
            <value>
                <fullName>Problème de synchronisation</fullName>
            </value>
            <value>
                <fullName>Panne PDA</fullName>
            </value>
            <value>
                <fullName>Injoignabilité</fullName>
            </value>
            <value>
                <fullName>Pas de PDA associé</fullName>
            </value>
            <value>
                <fullName>Anomalie colis</fullName>
                <isActive>false</isActive>
                <label>Anomalie colis</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>