force-app/main/default/objects/Conge_Indispo__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <formula>IF ( Date_de_debut__c &gt;  TODAY() ,$Label.CongeIndispo_A_Venir_2,
IF ( Date_de_fin__c  &lt;   TODAY() ,$Label.Conge_Indispo_Passe_2,$Label.CongeIndispo_En_Cours_2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statut</label>
    <type>Text</type>
</CustomField>