force-app/main/default/objects/Conge_Indispo__c/fields/Tech_Compte_ShippingCountry__c.field-meta.xml
<CustomField>
    <fullName>Tech_Compte_ShippingCountry__c</fullName>
    <formula>Nom_du_compte__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_Compte_ShippingCountry</label>
    <type>Text</type>
</CustomField>