force-app/main/default/objects/Conge_Indispo__c/fields/TECH_Conges_Dispo_Juillet_Aout__c.field-meta.xml
<CustomField>
    <fullName>TECH_Conges_Dispo_Juillet_Aout__c</fullName>
    <formula>IF( 
	AND(Date_de_debut__c &gt;= DATE( YEAR( TODAY()),07, 01 ), 
		Date_de_debut__c &lt;= DATE( YEAR( TODAY()),08, 31 ), 
		Date_de_fin__c &gt;= DATE( YEAR( TODAY()),07, 01 ), 
		Date_de_fin__c &lt;= DATE( YEAR( TODAY()),08, 31), 
		OR(RecordType.Id == $Label.RT_Conge_Indispo_Conge ,RecordType.Id == $Label.RT_Conge_Indispo_Disponibilite ) 
), true, false)</formula>
    <label>TECH Conges Dispo Juillet Aout</label>
    <type>Checkbox</type>
</CustomField>