force-app/main/default/objects/Conge_Indispo__c/fields/Tech_Treated__c.field-meta.xml
<CustomField>
    <fullName>Tech_Treated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_Treated</label>
    <type>Checkbox</type>
</CustomField>