force-app/main/default/objects/Conge_Indispo__c/fields/Type_d_indisponibilite__c.field-meta.xml
<CustomField>
    <fullName>Type_d_indisponibilite__c</fullName>
    <description>Ne pas activer l&#39;option &quot;Restreindre la liste sélectionnée aux valeurs définies dans l’ensemble de valeurs.	&quot; pour ne pas bloquer le PB qui crée automatiquement les indispos suite à des créations d&#39;anomalies.</description>
    <label>Type d&#39;indisponibilité</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>Planifiée</fullName>
            </value>
            <value>
                <fullName>Imprévue</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>