force-app/main/default/objects/Conge_Indispo__c/fields/Type_de_periode__c.field-meta.xml
<CustomField>
    <fullName>Type_de_periode__c</fullName>
    <label>Type de période</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Congés</fullName>
            </value>
            <value>
                <fullName>Disponibilité</fullName>
            </value>
            <value>
                <fullName>Indisponibilité</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>