force-app/main/default/objects/Conge_Indispo__c/recordTypes/Conge.recordType-meta.xml
<RecordType>
    <fullName>Conge</fullName>
    <active>true</active>
    <description>Permet de créer une période de congés.</description>
    <label>Congé</label>
</RecordType>