force-app/main/default/objects/Conge_Indispo__c/recordTypes/Disponibilite.recordType-meta.xml
<RecordType>
    <fullName>Disponibilite</fullName>
    <active>true</active>
    <description>Permet de créer une période de disponibilité.</description>
    <label>Disponibilité</label>
</RecordType>