force-app/main/default/objects/Conge_Indispo__c/recordTypes/Indisponibilite_consigne.recordType-meta.xml
<RecordType>
    <fullName>Indisponibilite_consigne</fullName>
    <active>true</active>
    <description>Permet de créer une période d&#39;indisponibilité d&#39;une Consigne.</description>
    <label>Indisponibilité_consigne</label>
</RecordType>