force-app/main/default/objects/Conge_Indispo__c/recordTypes/Indisponibilite_partenaire_BNL.recordType-meta.xml
<RecordType>
    <fullName>Indisponibilite_partenaire_BNL</fullName>
    <active>true</active>
    <description>Permet de créer une période d&#39;indisponibilité d&#39;un Partenaire situé en BENELUX</description>
    <label>Indisponibilité_partenaire_BNL</label>
</RecordType>