force-app/main/default/objects/Conge_Indispo__c/recordTypes/Indisponibilite_partenaire_CHE.recordType-meta.xml
<RecordType>
    <fullName>Indisponibilite_partenaire_CHE</fullName>
    <active>true</active>
    <description>Permet de créer une période d&#39;indisponibilité d&#39;un Partenaire situé en Suisse</description>
    <label>Indisponibilité_partenaire_CHE</label>
</RecordType>