force-app/main/default/objects/Conge_Indispo__c/recordTypes/Indisponibilite_partenaire_HUN.recordType-meta.xml
<RecordType>
    <fullName>Indisponibilite_partenaire_HUN</fullName>
    <active>true</active>
    <description>Permet de créer une période d&#39;indisponibilité d&#39;un Partenaire situé en Hongrie</description>
    <label>Indisponibilité_partenaire_HUN</label>
</RecordType>