force-app/main/default/objects/Conge_Indispo__c/recordTypes/Indisponibilite_standard.recordType-meta.xml
<RecordType>
    <fullName>Indisponibilite_standard</fullName>
    <active>true</active>
    <description>Permet de créer une période d&#39;indisponibilité d&#39;un Pudo standard</description>
    <label>Indisponibilité_standard</label>
</RecordType>