force-app/main/default/objects/Conge_Indispo__c/recordTypes/Indisponibilite_standard_BNL.recordType-meta.xml
<RecordType>
    <fullName>Indisponibilite_standard_BNL</fullName>
    <active>true</active>
    <description>Permet de créer une période d&#39;indisponibilité d&#39;un Pudo standard située en BENELUX</description>
    <label>Indisponibilite_standard_BNL</label>
</RecordType>