force-app/main/default/objects/Conge_Indispo__c/recordTypes/Indisponibilite_standard_CHE.recordType-meta.xml
<RecordType>
    <fullName>Indisponibilite_standard_CHE</fullName>
    <active>true</active>
    <description>Permet de créer une période d&#39;indisponibilité d&#39;un standard situé en Suisse</description>
    <label>Indisponibilite_standard_CHE</label>
</RecordType>