force-app/main/default/objects/Conge_Indispo__c/recordTypes/Indisponibilite_standard_HUN.recordType-meta.xml
<RecordType>
    <fullName>Indisponibilite_standard_HUN</fullName>
    <active>true</active>
    <description>Permet de créer une période d&#39;indisponibilité d&#39;un standard situé en Hongrie</description>
    <label>Indisponibilite_standard_HUN</label>
</RecordType>