force-app/main/default/objects/Conge_Indispo__c/validationRules/CONG_VR_01_Debut_Nouveau_Conge_Dispo.validationRule-meta.xml
<ValidationRule>
    <fullName>CONG_VR_01_Debut_Nouveau_Conge_Dispo</fullName>
    <active>false</active>
    <description>Un nouveau congé ou une nouvelle disponibilité doit débuter à Jour ou dans le futur.</description>
    <errorConditionFormula>AND( 
   NOT ISCHANGED(Tech_Treated__c), 
   Not($User.BypassValidationRule__c), 
   OR (RecordType.DeveloperName =&quot;Conge&quot;, 
       RecordType.DeveloperName =&quot;Disponibilite&quot;), 
   ISNEW(), 
    Date_de_debut__c &lt; today() 
   )</errorConditionFormula>
    <errorDisplayField>Date_de_debut__c</errorDisplayField>
    <errorMessage>Un nouveau congé ou une nouvelle disponibilité doivent débuter à Jour ou dans le futur.</errorMessage>
</ValidationRule>