force-app/main/default/objects/Conge_Indispo__c/validationRules/CONG_VR_02_Fin_Nouveau_Conge_Dispo.validationRule-meta.xml
<ValidationRule>
    <fullName>CONG_VR_02_Fin_Nouveau_Conge_Dispo</fullName>
    <active>true</active>
    <description>La date de fin d’un congé/dispo/indispo doit être supérieure ou égale à la date de début.</description>
    <errorConditionFormula>AND( Not($User.BypassValidationRule__c), 
     ISNEW(), 
     OR(RecordType.DeveloperName = &quot;Conge&quot;, 
        RecordType.DeveloperName = &quot;Disponibilite&quot; ), 
      Date_de_fin__c &lt; Date_de_debut__c 
      )</errorConditionFormula>
    <errorDisplayField>Date_de_fin__c</errorDisplayField>
    <errorMessage>La date de fin d’un congé ou d&#39;une disponibilité doit être supérieure ou égale à la date de début.</errorMessage>
</ValidationRule>