force-app/main/default/objects/Conge_Indispo__c/validationRules/CONG_VR_03_Modifier_Debut_Dispo_Indispo.validationRule-meta.xml
<ValidationRule>
    <fullName>CONG_VR_03_Modifier_Debut_Dispo_Indispo</fullName>
    <active>true</active>
    <description>Avant le début du congé, d&#39;une disponibilité ou une indisponibilité il est possible de modifier la date de début et cette dernière doit rester supérieure ou égale à la date du jour.</description>
    <errorConditionFormula>AND( 
     NOT ISCHANGED(Tech_Treated__c), 
     NOT($User.BypassValidationRule__c), 
     NOT(ISPICKVAL( Type_d_indisponibilite__c ,&quot;4&quot;)), 
     ISCHANGED(Date_de_debut__c), 
     (PRIORVALUE(Date_de_debut__c) &gt; TODAY()), 
     Date_de_debut__c &lt; TODAY() 
     )</errorConditionFormula>
    <errorDisplayField>Date_de_debut__c</errorDisplayField>
    <errorMessage>La date de début doit rester supérieure ou égale à la date du jour.</errorMessage>
</ValidationRule>