force-app/main/default/objects/Conge_Indispo__c/validationRules/CONG_VR_04_Modifier_Date_Fin_Conge_Dispo.validationRule-meta.xml
<ValidationRule>
    <fullName>CONG_VR_04_Modifier_Date_Fin_Conge_Dispo</fullName>
    <active>true</active>
    <description>Il est possible de modifier la date de fin uniquement pour une date supérieure ou égale à la date du jour. 
Il est possible de modifier la date de fin uniquement pour une date supérieure ou égale à la date du début de la disponibilité</description>
    <errorConditionFormula>AND( 
NOT ISCHANGED(Tech_Treated__c), 
Not($User.BypassValidationRule__c), 
OR(
RecordType.DeveloperName =&quot;Conge&quot;,
RecordType.DeveloperName =&quot;Disponibilite&quot;
),
OR(
ISCHANGED(Date_de_fin__c),
ISCHANGED(Date_de_debut__c)
), 
OR
   (Date_de_fin__c &lt; Date_de_debut__c, 
    Date_de_fin__c &lt; Today ()) 
)</errorConditionFormula>
    <errorDisplayField>Date_de_fin__c</errorDisplayField>
    <errorMessage>La date de fin doit rester supérieure ou égale à la date du jour et supérieure à la date de début.</errorMessage>
</ValidationRule>