force-app/main/default/objects/Conge_Indispo__c/validationRules/CONG_VR_12_Debut_Nouvelle_Indispo.validationRule-meta.xml
<ValidationRule>
    <fullName>CONG_VR_12_Debut_Nouvelle_Indispo</fullName>
    <active>false</active>
    <description>Une Indisponibilité doit débuter à Jour ou dans le futur.</description>
    <errorConditionFormula>AND(    
        NOT ISCHANGED(Tech_Treated__c), 
        Not($User.BypassValidationRule__c),
        ISNEW(),
        OR(
        CONTAINS($Label.CongInd_RT_IndispoStandard_ALL,RecordTypeId),
        CONTAINS($Label.CongInd_RT_IndispoConsigne,RecordTypeId)),
        Date_de_debut__c    &lt;   today())</errorConditionFormula>
    <errorDisplayField>Date_de_debut__c</errorDisplayField>
    <errorMessage>Une Indisponibilité doit débuter à Jour ou dans le futur.</errorMessage>
</ValidationRule>