force-app/main/default/objects/Conge_Indispo__c/validationRules/CONG_VR_13_Injoignabilite_jour_J.validationRule-meta.xml
<ValidationRule>
    <fullName>CONG_VR_13_Injoignabilite_jour_J</fullName>
    <active>false</active>
    <description>Si une injoignabilité est créée alors la date de début doit être supérieure ou égale à la date J.</description>
    <errorConditionFormula>Injoignable__c  = True  &amp;&amp;  Date_de_debut__c  &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Injoignable__c</errorDisplayField>
    <errorMessage>Veuillez renseigner la date d&#39;aujourd&#39;hui si vous souhaitez créer une injoignabilité.</errorMessage>
</ValidationRule>