force-app/main/default/objects/Conge_Indispo__c/validationRules/CONG_VR_14_Injoignabilite_Raison_Appel.validationRule-meta.xml
<ValidationRule>
    <fullName>CONG_VR_14_Injoignabilite_Raison_Appel</fullName>
    <active>true</active>
    <description>Si la valeur &quot;Injoignabilité&quot; est sélectionnée, il faut renseigner le champ &quot;Raison d&#39;appel&quot;.</description>
    <errorConditionFormula>AND(
NOT($User.BypassValidationRule__c),
RecordType.DeveloperName = &#39;Indisponibilite_standard&#39;,
OR( ISPICKVAL( Sous_type__c , &#39;Injoignabilité&#39;),
ISPICKVAL( Sous_type__c , &#39;Qualité de service&#39;)),
ISBLANK( TEXT(Raison_d_appel__c ))
)</errorConditionFormula>
    <errorDisplayField>Raison_d_appel__c</errorDisplayField>
    <errorMessage>Veuillez renseigner une raison d&#39;appel pour une indisponibilité de type &quot;Injoignable&quot; ou &quot;Qualité de service&quot;.</errorMessage>
</ValidationRule>