force-app/main/default/objects/Conge_Indispo__c/validationRules/CONG_VR_15_Injoignabilite_Autres.validationRule-meta.xml
<ValidationRule>
    <fullName>CONG_VR_15_Injoignabilite_Autres</fullName>
    <active>true</active>
    <description>Si la raison d&#39;appel est &quot;Autres&quot; alors il faut remplir le champ &quot;Autres (motif)</description>
    <errorConditionFormula>OR(
AND (
ISPICKVAL(Raison_d_appel__c, &#39;Autres&#39; ),
ISBLANK( Autres_motif__c )),
AND(
NOT(ISPICKVAL(Raison_d_appel__c, &#39;Autres&#39; )),
NOT(ISBLANK( Autres_motif__c )))
)</errorConditionFormula>
    <errorDisplayField>Autres_motif__c</errorDisplayField>
    <errorMessage>Veuillez remplir le champ Autres (motif) si et seulement si la raison d&#39;appel est &quot;Autres&quot;.</errorMessage>
</ValidationRule>